# Master-degree

.github/workflows/: main.yml
ModelChecking/: Plane.old  Plane.tla  Авиаперевозки.odp
ModelChecking/PlaneCheck.toolbox/: .project  Plane.tla.pmap  PlaneCheck___PlaneCheck.launch
ModelChecking/PlaneCheck.toolbox/PlaneCheck/: MC.cfg  MC.tla  MC_TE.out  Plane.tla
SAT/: .gitignore  Algo.cppm  Algo2.cppm  CMakeLists.txt  Common.cppm  Makefile  README.md  Sat.cpp  Sat.cppm  Sat.h  Sat2.cppm  format.sh  main.cpp  test.cpp
SAT/cnf/: manual.cnf
SAT/data/: benchmark.data
SAT2/: .gitignore  BaseSat.cxx  CMakeLists.txt  Common.cxx  Makefile  README.md  SAT.odp  Sat.cxx  Sat1.cxx  Sat2.cxx  Sat3.cxx  Sat4.cxx  Sat5.cxx  Sat6.cxx  a.cxx  bench.cxx  benchmark.py  check2  gen.py  gendata_template.txt  mga-sc.md  test.cxx
SAT2/.github/workflows/: main.yml
SAT2/CompileTime/: CMakeLists.txt  Sat1.cxx  test.cxx  testData.cxx
SAT2/CrossTime/: CMakeLists.txt  Sat.cxx  test.cxx  testData.cxx
SAT2/cnf/for_tests/: manual.cnf
SAT2/papers/: graphics_for_presentation.graphml
example-modules/: CMakeLists.txt  README.md
